# DotLanth Meson build options
# These map directly from the CMake options for migration compatibility

# Feature flags
option('simd',
    type: 'boolean',
    value: true,
    description: 'Enable SIMD optimizations (-march=native)')

option('jit',
    type: 'boolean',
    value: true,
    description: 'Enable JIT compilation (x86-64 only)')

# Build component toggles
option('tests',
    type: 'boolean',
    value: true,
    description: 'Build unit tests')

option('benchmarks',
    type: 'boolean',
    value: false,
    description: 'Build benchmarks')

option('capi',
    type: 'boolean',
    value: true,
    description: 'Build C API shared library for FFI')

option('cli',
    type: 'boolean',
    value: true,
    description: 'Build CLI tools (dotdsl, dotvm, dotdis, dotinfo, dotpkg)')

option('fuzzers',
    type: 'boolean',
    value: false,
    description: 'Build fuzzing targets (requires Clang with LibFuzzer)')

# Sanitizer configuration
option('sanitizers',
    type: 'combo',
    choices: ['none', 'address', 'thread', 'memory', 'undefined'],
    value: 'none',
    description: 'Enable sanitizers (address=ASan+UBSan, thread=TSan, memory=MSan)')

# Optional backends
option('postgresql',
    type: 'boolean',
    value: false,
    description: 'Enable PostgreSQL state backend')

# Code coverage
option('coverage',
    type: 'boolean',
    value: false,
    description: 'Enable code coverage instrumentation')
