[package]
name = "dot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
dot_db = { path = "../dot_db" }
dot_dsl = { path = "../dot_dsl" }
dot_ops = { path = "../dot_ops" }
dot_rt = { path = "../dot_rt" }
dot_vm = { path = "../dot_vm" }

[dev-dependencies]
tempfile = "3.10"
