[package]
name = "dot_artifacts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.10"
