[package]
name = "dot_db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }
uuid = { version = "1.18", features = ["fast-rng", "v4"] }

[dev-dependencies]
tempfile = "3.10"
